Logo vertical align fix

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,8 @@ html, body, #content{
 
 #logo img{
 	border:0px;
+	display: inline-block;
+	vertical-align:middle;
 }
 
 #menu {
